--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.4.5",
     "openai": "^4.56.0",
     "twitter-api-v2": "^1.16.0"
+    "node-telegram-bot-api": "^0.61.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
