--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
+    "@types/node-telegram-bot-api": "^0.61.6",
     "typescript": "^5.5.4",
     "cross-env": "^7.0.3"
   }
